<resources>
    <string name="app_name">Views &amp; Layout Hierarchy</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="tombol">Tombol</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constain_layout">Constain Layout</string>
    <string name="no">0</string>
    <string name="zero">zero</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="txt_no">No.</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="nama">Nama</string>
    <string name="todo">TODO</string>

    <string-array name="names">
        <item>Nuryadin Abutani</item>
        <item>Nuryadin</item>
        <item>Abutani</item>
        <item>Abu</item>
    </string-array>

    <string-array name="photo">
        <item>@drawable/ic_baseline_home_24</item>
        <item>@drawable/ic_launcher_background</item>
        <item>@drawable/ic_baseline_add_circle_24</item>
        <item>@drawable/ic_launcher_foreground</item>
    </string-array>
</resources>