<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLinier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/linear_layout"
        app:layout_constraintEnd_toEndOf="@+id/btnFrame"
        app:layout_constraintStart_toStartOf="@+id/btnFrame"
        app:layout_constraintTop_toBottomOf="@+id/btnFrame" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/relative_layout"
        app:layout_constraintEnd_toEndOf="@+id/btnLinier"
        app:layout_constraintStart_toStartOf="@+id/btnLinier"
        app:layout_constraintTop_toBottomOf="@+id/btnLinier" />

    <Button
        android:id="@+id/btnConstain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/constain_layout"
        app:layout_constraintEnd_toEndOf="@+id/btnRelative"
        app:layout_constraintStart_toStartOf="@+id/btnRelative"
        app:layout_constraintTop_toBottomOf="@+id/btnRelative" />
</androidx.constraintlayout.widget.ConstraintLayout>